@@ -1,0 +1,14 @@
+TOP = ../..
+include $(TOP)/configure/CONFIG
+#----------------------------------------
+#  ADD MACRO DEFINITIONS AFTER THIS LINE
+#  #
+
+ARCHIVE += bsaArchivePVs.tpl-arch
+
+include $(TOP)/configure/RULES
+#----------------------------------------
+#  ADD RULES AFTER THIS LINE
+#  #
+# End of File
+#
